# ggmsg

./: .gitignore  CMakeLists.txt  README.md  ggms.sln
ServerClientTest/: 3DES.cpp  ServerClientTest.cpp  ServerClientTest.vcxproj  ServerClientTest.vcxproj.filters  pch.h
ggmsg/: 3DES.cpp  3DES.h  CMakeLists.txt  Channel.cpp  Channel.h  ChannelMgr.cpp  ChannelMgr.h  Diagnosis.cpp  Timer.h  define.h  ggmsg.cpp  ggmsg.h  ggmsg.vcxproj  ggmsg.vcxproj.filters  stdafx.h
ggmsg.Tests/: ggmsg.Tests.vcxproj  test.cpp
ggmsg/include/: 3DES.h  Channel.h  ChannelMgr.h  ChannelNode.h  Diagnosis.h  Timer.h  define.h  ggmsg.h  stdafx.h  targetver.h
ggmsg/src/: 3DES.cpp  Channel.cpp  ChannelMgr.cpp  ChannelNode.cpp  Diagnosis.cpp  ggmsg.cpp
ggmsgTest/: CMakeLists.txt  ggmsgTest.cpp  ggmsgTest.vcxproj  ggmsgTest.vcxproj.filters
jggmsg/: CMakeLists.txt  jggmsg.cpp  jggmsg.h  jggmsg.i  various.i
jggmsg/java_src/: ChannelListener.java  ChannelNode.java  SWIGTYPE_jobjectArray.java  SWIGTYPE_p_jobjectArray.java  SWIGTYPE_p_std__string.java  SWIGTYPE_p_void.java  ggmsg.java  ggmsgJNI.java  jggmsg.java  jggmsgJNI.java
jggmsgdemo/: pom.xml
jggmsgdemo/src/main/java/org/guauga/demo/: DemoApplication.java  MsgChannel.java
jggmsgdemo/src/test/java/org/guauga/demo/: DemoApplicationTests.java
nggmsg/: Channel.cs  nggmsg.cpp  nggmsg.csproj  nggmsg.h  nggmsg.i
nggmsg/Properties/: AssemblyInfo.cs
nggmsg/csharp_src/: ChannelListener.cs  ChannelNode.cs  SWIGTYPE_p_std__string.cs  SWIGTYPE_p_void.cs  ggmsg.cs  ggmsgPINVOKE.cs
nggmsgTest/: Program.cs  nggmsgTest.csproj
nggmsgTest/Properties/: AssemblyInfo.cs
